<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DealActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_travel"
        android:layout_marginLeft= "20dp"
        android:layout_marginRight= "20dp"
        android:layout_marginTop= "20dp"
        android:hint="@string/deal_title"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/price_travel"
        android:layout_marginLeft= "20dp"
        android:inputType="numberDecimal"
        android:layout_marginRight= "20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/price_numbers_only"
        android:layout_below="@+id/title_travel"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description_travel"
        android:layout_marginLeft= "20dp"
        android:layout_marginRight= "20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        android:layout_below="@+id/price_travel"
        />


</RelativeLayout>